deployments/workloads/stirling-pdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirling
  labels:
    app: stirling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stirling
  template:
    metadata:
      labels:
        app: stirling
    spec:
      containers:
        - name: stirling
          image: frooodle/s-pdf:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          resources:
            limits:
              memory: "3000Mi"
              cpu: "3000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          volumeMounts:
            - name: stirling
              mountPath: /configs
              subPath: extraConfigs
            - name: stirling
              mountPath: /usr/share/tessdata
              subPath: trainingData
      volumes:
        - name: stirling
          nfs:
            server: truenas
            path: /mnt/bigdata/kubernetes/stirling
            readOnly: false
