deployments/workloads/stirling-pdf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stirling
spec:
  selector:
    app: stirling
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
