deployments/workloads/stirling-pdf/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdf-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: pdf.nilsherzig.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stirling
                port:
                  number: 80
  tls:
    - hosts:
        - pdf.nilsherzig.com
      secretName: tls-pdf-cert
